[RUN-5012] Fix compiler warnings in core, rundeckapp, and stub-plugin
Adds missing @Deprecated annotations (dep-ann), fixes Lombok @Builder
default handling and equals/hashCode on JobReferenceItem, replaces
deprecated Integer(String) construction, adds type='string' to
OpenAPI @Schema(allowableValues=...) definitions that were failing to
convert during spec generation, narrows a couple of unchecked casts in
stub-plugin, and approves known-safe npm install scripts in ui-trellis.

No behavior changes intended.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>